--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
   <body>
     <div id="app"></div>
-    <div class="loader-container" style="display: none;">
+    <div class="loader-container" id="loaderContainer" style="display: none;">
       <div class="inner-container">
           <div style="text-align: center">
               <img src="assets/loader.gif">
